chore: .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,10 +20,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mariadb
 DB_HOST=
-DB_PORT=6543
-DB_DATABASE=postgres
+DB_PORT=
+DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
