--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "pusher-js": "^8.4.0-rc2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3",
     "vue-toastification": "^2.0.0-rc.5"
